| Summary: | ASTERISK-24994: dns: Query set unit tests are failing due to race condition | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2015-04-22 11:28:09 | Date Closed: | 2015-04-22 14:27:33 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The test_dns_query_set unit tests are currently sporadically failing due to a race condition with the underlying queries. This is being caused due to the query set code incorrectly destroying queries after the user callback has been invoked. The documentation states, however, that queries are available for the lifetime of the query set. This is a reasonable expectation. | ||
| Comments: | |||